Update x-pack/plugin/ml/src/internalClusterTest/java/org/elasticsearch/xpack/ml/integration/AnnotationIndexIT.java
Co-authored-by: David Roberts <dave.roberts@elastic.co>